<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_name">Forge Brewhouse</string>
    <string name="ageWarningLabel">YOU MUST BE 21+ TO ENTER</string>
    <string name="dobEnter">Please Enter Your Birthday</string>
    <string name="errMessageAge">You are not old enough to drink!</string>
    <string name="DOB">Date of Birth</string>
    <string name="txtMonth">Month</string>
    <string name="txtDay">Day</string>
    <string name="txtYear">Year</string>
    <string name="btnEnter">Enter</string>
    <string name="forgeLogo">Logo</string>
    <string name="onTapLabel">What\'s on Tap</string>
    <string name="bombersToGoLabel">Bomber\'s To Go</string>

    <string-array name="tapList">
        <item>Sunrise</item>
        <item>Great Western</item>
        <item>Lactose Tolerant</item>
        <item>Diamond Dust</item>
        <item>Teleporter</item>
        <item>Brut Bubble</item>
        <item>Quiet Man</item>
        <item>Kilted Pumpkin</item>
        <item>HiLow Haze</item>
        <item>LH Azaccalypse</item>
        <item>LH Avalanche</item>
        <item>LH Heavy Hitter I</item>
        <item>LH Heavy Hitter II</item>
    </string-array>

    <string-array name="bomberList">
        <item>LH Azaccalypse</item>
        <item>LH Avalanche</item>
        <item>LH Heavy Hitter II</item>
        <item>Kilted Pumpkin</item>
        <item>Diamond Dust</item>
        <item>Teleporter</item>
    </string-array>

    <string-array name="Month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="Days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="Years">
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
        <item>1989</item>
        <item>1988</item>
        <item>1987</item>
        <item>1986</item>
        <item>1985</item>
        <item>1984</item>
        <item>1983</item>
        <item>1982</item>
        <item>1981</item>
        <item>1980</item>
        <item>1979</item>
        <item>1978</item>
        <item>1977</item>
        <item>1976</item>
        <item>1975</item>
        <item>1974</item>
        <item>1973</item>
        <item>1972</item>
        <item>1971</item>
        <item>1970</item>
        <item>1969</item>
        <item>1968</item>
        <item>1967</item>
        <item>1966</item>
        <item>1965</item>
        <item>1964</item>
        <item>1963</item>
        <item>1962</item>
        <item>1961</item>
        <item>1960</item>
        <item>1959</item>
        <item>1958</item>
        <item>1957</item>
        <item>1956</item>
        <item>1955</item>
        <item>1954</item>
        <item>1953</item>
        <item>1952</item>
        <item>1951</item>
        <item>1950</item>
        <item>1949</item>
        <item>1948</item>
        <item>1947</item>
        <item>1946</item>
        <item>1945</item>
        <item>1944</item>
        <item>1943</item>
        <item>1942</item>
        <item>1941</item>
        <item>1940</item>

    </string-array>

</resources>
