<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgeVerificationActivity">

    <TextView
        android:id="@+id/textViewAgeWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/ageWarningLabel"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgeLogo" />

    <ImageView
        android:id="@+id/forgeLogo"
        android:layout_width="318dp"
        android:layout_height="132dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/forgeLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forge_logo" />

    <TextView
        android:id="@+id/textViewDobEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/dobEnter"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAgeWarning" />

    <Spinner
        android:id="@+id/spnMonth"
        android:layout_width="99dp"
        android:layout_height="34dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:entries="@array/Month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDobEntry" />

    <Button
        android:id="@+id/btnEnter"
        android:layout_width="139dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnEnter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spnDay"
        android:layout_width="99dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:entries="@array/Days"
        app:layout_constraintStart_toEndOf="@+id/spnMonth"
        app:layout_constraintTop_toBottomOf="@+id/textViewDobEntry" />

    <Spinner
        android:id="@+id/spnYear"
        android:layout_width="105dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="44dp"
        android:entries="@array/Years"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/spnDay"
        app:layout_constraintTop_toBottomOf="@+id/textViewDobEntry" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="57dp"
        android:layout_height="24dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/txtMonth"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnMonth" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="41dp"
        android:layout_height="24dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/txtDay"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/spnDay" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/txtYear"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/spnYear" />

</android.support.constraint.ConstraintLayout>